fix(gatsby): minor mobile & dark mode fixes

--- a/gatsby/src/pages/grunnleggende/designtokens/index.module.css
+++ b/gatsby/src/pages/grunnleggende/designtokens/index.module.css
@@ -11,6 +11,7 @@
     &-list {
       display: flex;
       gap: var(--sds-space-gap-small);
+      flex-wrap: wrap;
     }
 
     &-container {
